src/main/java/wrenT/wrenParser.java
// Generated from java-escape by ANTLR 4.11.1
package wrenT;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class wrenParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, IS=2, BEGIN=3, END=4, VAR=5, INTEGER=6, BOOLEAN=7, READ=8, 
		WRITE=9, SKIP_=10, WHILE=11, DO=12, IF=13, THEN=14, ELSE=15, AND=16, OR=17, 
		TRUE=18, FALSE=19, NOT=20, ASSIGN=21, COLON=22, COMMA=23, LPAREN=24, RPAREN=25, 
		SEMI=26, LE=27, LT=28, EQUAL=29, GT=30, GE=31, NE=32, ADD=33, SUB=34, 
		MUL=35, DIV=36, NURMAL=37, IDENTIFIER=38, WS=39;
	public static final int
		RULE_prog = 0, RULE_block = 1, RULE_declaration_seq = 2, RULE_declaration = 3, 
		RULE_type = 4, RULE_variable_list = 5, RULE_command_seq = 6, RULE_command = 7, 
		RULE_thencommand = 8, RULE_elsecommand = 9, RULE_expr = 10, RULE_integer_expr = 11, 
		RULE_element = 12, RULE_boolean_expr = 13, RULE_boolean_element = 14, 
		RULE_comparison = 15, RULE_weak_op = 16, RULE_strong_op = 17, RULE_variable = 18, 
		RULE_relation = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "block", "declaration_seq", "declaration", "type", "variable_list", 
			"command_seq", "command", "thencommand", "elsecommand", "expr", "integer_expr", 
			"element", "boolean_expr", "boolean_element", "comparison", "weak_op", 
			"strong_op", "variable", "relation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'is'", "'begin'", "'end'", "'var'", "'integer'", 
			"'boolean'", "'read'", "'write'", "'skip'", "'while'", "'do'", "'if'", 
			"'then'", "'else'", "'and'", "'or'", "'true'", "'false'", "'not'", "':='", 
			"':'", "','", "'('", "')'", "';'", "'<='", "'<'", "'='", "'>'", "'>='", 
			"'<>'", "'+'", "'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "IS", "BEGIN", "END", "VAR", "INTEGER", "BOOLEAN", "READ", 
			"WRITE", "SKIP_", "WHILE", "DO", "IF", "THEN", "ELSE", "AND", "OR", "TRUE", 
			"FALSE", "NOT", "ASSIGN", "COLON", "COMMA", "LPAREN", "RPAREN", "SEMI", 
			"LE", "LT", "EQUAL", "GT", "GE", "NE", "ADD", "SUB", "MUL", "DIV", "NURMAL", 
			"IDENTIFIER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public wrenParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(wrenParser.PROGRAM, 0); }
		public TerminalNode IDENTIFIER() { return getToken(wrenParser.IDENTIFIER, 0); }
		public TerminalNode IS() { return getToken(wrenParser.IS, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof wrenVisitor ) return ((wrenVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(PROGRAM);
			setState(41);
			match(IDENTIFIER);
			setState(42);
			match(IS);
			setState(43);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public Declaration_seqContext declaration_seq() {
			return getRuleContext(Declaration_seqContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(wrenParser.BEGIN, 0); }
		public Command_seqContext command_seq() {
			return getRuleContext(Command_seqContext.class,0);
		}
		public TerminalNode END() { return getToken(wrenParser.END, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof wrenVisitor ) return ((wrenVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			declaration_seq();
			setState(46);
			match(BEGIN);
			setState(47);
			command_seq();
			setState(48);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaration_seqContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public Declaration_seqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_seq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).enterDeclaration_seq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).exitDeclaration_seq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof wrenVisitor ) return ((wrenVisitor<? extends T>)visitor).visitDeclaration_seq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_seqContext declaration_seq() throws RecognitionException {
		Declaration_seqContext _localctx = new Declaration_seqContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration_seq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VAR) {
				{
				{
				setState(50);
				declaration();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(wrenParser.VAR, 0); }
		public Variable_listContext variable_list() {
			return getRuleContext(Variable_listContext.class,0);
		}
		public TerminalNode COLON() { return getToken(wrenParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(wrenParser.SEMI, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof wrenVisitor ) return ((wrenVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(VAR);
			setState(57);
			variable_list();
			setState(58);
			match(COLON);
			setState(59);
			type();
			setState(60);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(wrenParser.INTEGER, 0); }
		public TerminalNode BOOLEAN() { return getToken(wrenParser.BOOLEAN, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof wrenVisitor ) return ((wrenVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_la = _input.LA(1);
			if ( !(_la==INTEGER || _la==BOOLEAN) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_listContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(wrenParser.COMMA, 0); }
		public Variable_listContext variable_list() {
			return getRuleContext(Variable_listContext.class,0);
		}
		public Variable_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).enterVariable_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).exitVariable_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof wrenVisitor ) return ((wrenVisitor<? extends T>)visitor).visitVariable_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_listContext variable_list() throws RecognitionException {
		Variable_listContext _localctx = new Variable_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variable_list);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				variable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				variable();
				setState(66);
				match(COMMA);
				setState(67);
				variable_list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Command_seqContext extends ParserRuleContext {
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(wrenParser.SEMI, 0); }
		public Command_seqContext command_seq() {
			return getRuleContext(Command_seqContext.class,0);
		}
		public Command_seqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command_seq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).enterCommand_seq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).exitCommand_seq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof wrenVisitor ) return ((wrenVisitor<? extends T>)visitor).visitCommand_seq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Command_seqContext command_seq() throws RecognitionException {
		Command_seqContext _localctx = new Command_seqContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_command_seq);
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				command();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				command();
				setState(73);
				match(SEMI);
				setState(74);
				command_seq();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(wrenParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SKIP_() { return getToken(wrenParser.SKIP_, 0); }
		public TerminalNode READ() { return getToken(wrenParser.READ, 0); }
		public TerminalNode WRITE() { return getToken(wrenParser.WRITE, 0); }
		public Integer_exprContext integer_expr() {
			return getRuleContext(Integer_exprContext.class,0);
		}
		public List<TerminalNode> WHILE() { return getTokens(wrenParser.WHILE); }
		public TerminalNode WHILE(int i) {
			return getToken(wrenParser.WHILE, i);
		}
		public Boolean_exprContext boolean_expr() {
			return getRuleContext(Boolean_exprContext.class,0);
		}
		public TerminalNode DO() { return getToken(wrenParser.DO, 0); }
		public Command_seqContext command_seq() {
			return getRuleContext(Command_seqContext.class,0);
		}
		public TerminalNode END() { return getToken(wrenParser.END, 0); }
		public List<TerminalNode> IF() { return getTokens(wrenParser.IF); }
		public TerminalNode IF(int i) {
			return getToken(wrenParser.IF, i);
		}
		public TerminalNode THEN() { return getToken(wrenParser.THEN, 0); }
		public ThencommandContext thencommand() {
			return getRuleContext(ThencommandContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(wrenParser.ELSE, 0); }
		public ElsecommandContext elsecommand() {
			return getRuleContext(ElsecommandContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).exitCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof wrenVisitor ) return ((wrenVisitor<? extends T>)visitor).visitCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_command);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				variable();
				setState(79);
				match(ASSIGN);
				setState(80);
				expr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(SKIP_);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				match(READ);
				setState(84);
				variable();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				match(WRITE);
				setState(86);
				integer_expr(0);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				match(WHILE);
				setState(88);
				boolean_expr(0);
				setState(89);
				match(DO);
				setState(90);
				command_seq();
				setState(91);
				match(END);
				setState(92);
				match(WHILE);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(94);
				match(IF);
				setState(95);
				boolean_expr(0);
				setState(96);
				match(THEN);
				setState(97);
				thencommand();
				setState(98);
				match(END);
				setState(99);
				match(IF);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(101);
				match(IF);
				setState(102);
				boolean_expr(0);
				setState(103);
				match(THEN);
				setState(104);
				thencommand();
				setState(105);
				match(ELSE);
				setState(106);
				elsecommand();
				setState(107);
				match(END);
				setState(108);
				match(IF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ThencommandContext extends ParserRuleContext {
		public Command_seqContext command_seq() {
			return getRuleContext(Command_seqContext.class,0);
		}
		public ThencommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thencommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).enterThencommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).exitThencommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof wrenVisitor ) return ((wrenVisitor<? extends T>)visitor).visitThencommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThencommandContext thencommand() throws RecognitionException {
		ThencommandContext _localctx = new ThencommandContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_thencommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			command_seq();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElsecommandContext extends ParserRuleContext {
		public Command_seqContext command_seq() {
			return getRuleContext(Command_seqContext.class,0);
		}
		public ElsecommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elsecommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).enterElsecommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).exitElsecommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof wrenVisitor ) return ((wrenVisitor<? extends T>)visitor).visitElsecommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElsecommandContext elsecommand() throws RecognitionException {
		ElsecommandContext _localctx = new ElsecommandContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_elsecommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			command_seq();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public Integer_exprContext integer_expr() {
			return getRuleContext(Integer_exprContext.class,0);
		}
		public Boolean_exprContext boolean_expr() {
			return getRuleContext(Boolean_exprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof wrenVisitor ) return ((wrenVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				integer_expr(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				boolean_expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Integer_exprContext extends ParserRuleContext {
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public List<Integer_exprContext> integer_expr() {
			return getRuleContexts(Integer_exprContext.class);
		}
		public Integer_exprContext integer_expr(int i) {
			return getRuleContext(Integer_exprContext.class,i);
		}
		public Strong_opContext strong_op() {
			return getRuleContext(Strong_opContext.class,0);
		}
		public Weak_opContext weak_op() {
			return getRuleContext(Weak_opContext.class,0);
		}
		public Integer_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).enterInteger_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wrenListener ) ((wrenListener)listener).exitInteger_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof wrenVisitor ) return ((wrenVisitor<? extends T>)visitor).visitInteger_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Integer_exprContext integer_expr() throws RecognitionException {
		return integer_expr(0);
	}

	private Integer_exprContext integer_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Integer_exprContext _localctx = new Integer_exprContext(_ctx, _parentState);
		Integer_exprContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_integer_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(121);
			element();
			}
			_ctx.stop = _input.LT(-1);
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(131);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new Integer_exprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_integer_expr);
						setState(123);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(124);
						strong_op();
						setState(125);
						integer_expr(4);
						}
						break;
					case 2:
						{
						_localctx = new Integer_exprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_integer_expr);
						setState(127);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(128);
						weak_op();
						setState(129);
						integer_expr(3);
						}
						break;
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
